# PrepLog

./: .gitignore  README.md  docker-compose.yml
PrepLogChromeExtension/: package-lock.json  package.json  tsconfig.json  webpack.config.js
PrepLogChromeExtension/src/: api.ts  background.ts  content.ts  manifest.json  popup.html  popup.ts  types.ts
PrepLogChromeExtension/src/styles/: popup.css
PrepLogGUI/: pyproject.toml
PrepLogGUI/app/: api_client.py  audio_player.py  audio_recorder.py  config.py  main.py
PrepLogGUI/app/components/: attempts_panel.py  docker_panel.py  problem_panel.py  recording_panel.py  transcription_panel.py
PrepLogGUI/assets/: icon.icns
PrepLogGUI/tests/: test_api_client.py  test_audio_player.py  test_audio_recorder.py
PrepLogServer/: Dockerfile  LICENSE.md  pyproject.toml
PrepLogServer/app/: config.py  database.py  main.py  models.py  schemas.py
PrepLogServer/app/routers/: attempts.py  leetcode.py  problems.py  recordings.py
PrepLogServer/app/services/: transcription.py
PrepLogServer/tests/: conftest.py  test_attempts.py  test_leetcode.py  test_problems.py  test_recordings.py
TranscriptionService/: Dockerfile  pyproject.toml
TranscriptionService/app/: celery_app.py  config.py  main.py  schemas.py  tasks.py
TranscriptionService/app/routers/: transcribe.py
TranscriptionService/tests/: test_api.py  test_tasks.py  test_wav_loader.py
